# ripple-app

./: .dockerignore  .gitignore  docker-compose.yml
backend/: Dockerfile  Makefile  README.md  env.dev  gunicorn_config.py  manage.py  pyproject.toml
backend/.github/workflows/: workflow-pr.yml
backend/backend/: settings.py  urls.py
backend/common/: factories.py
backend/newsfeed/: factories.py  urls.py
backend/newsfeed/migrations/: 0001_initial.py  0002_rename_last_modified_rippleet_updated_at.py  0003_alter_rippleet_updated_at.py  0004_alter_rippleet_updated_at.py  0005_rippleet_likes.py
backend/newsfeed/models/: __init__.py  rippleet.py
backend/newsfeed/serializers/: __init__.py  rippleet_serializer.py
backend/newsfeed/tests/: test_endless_scroll.py  test_rippleet_viewset.py
backend/newsfeed/viewsets/: __init__.py  mixins.py  rippleet_viewset.py
backend/register/: urls.py
backend/register/serializers/: login_serializer.py  register_serializer.py
backend/register/tests/: test_login_view.py  test_register_view.py
backend/register/views/: __init__.py  login_view.py  register_view.py  test_view.py
backend/user_profile/: apps.py  signals.py  urls.py
backend/user_profile/migrations/: 0001_initial.py  0002_userprofile_followers.py  0003_remove_userprofile_bio.py
backend/user_profile/models/: user_profile.py
backend/user_profile/serializers/: __init__.py  follow_action_serializer.py  follow_serializer.py  profile_serializer.py  user_profile_serializer.py
backend/user_profile/tests/: test_follow_unfollow.py  test_user_profile.py
(+48 files in other folders)
