[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Humberto Nacif <gigantedeluz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.0"
django = "^5.1.3"
djangorestframework = "^3.15.2"
psycopg2-binary = "^2.9.10"
djangorestframework-simplejwt = "^5.3.1"
python-dotenv = "^1.0.1"
factory-boy = "^3.3.1"
django-extensions = "^3.2.3"
black = "^24.10.0"
flake8 = "^7.1.1"
gunicorn = "^23.0.0"
daphne = "^4.1.2"
twisted = {extras = ["http2", "tls"], version = "^24.10.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
